--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['expedition']" [routerLinkActive]="['active']">Expedition</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['about']" [routerLinkActive]="['active']">About</a>
+    </li>
   </ul>
   <div class="border-top-0">
     <router-outlet></router-outlet>
