--- a/src/app/patch-notes-generator/patch-notes-generator.component.html
+++ b/src/app/patch-notes-generator/patch-notes-generator.component.html
@@ -20,13 +20,12 @@
 </div>
 
 <ng-container *ngIf="isCompleted">
-  <div class="form-inline" *ngIf="cardChanged.length || cardAdded.length">
+  <div class="form-inline" *ngIf="getChangedCard().length || getAddedCard().length">
     <div class="form-group">
       <label for="resourceImageFolder">Resource Image Folder</label>
-      <!-- <input type="file" class="form-control mx-sm-3" id="resourceImageFolder" placeholder="Resource Image Folder"
-        [(ngModel)]="resourceImageFolder"> -->
-      <button *ngIf="cardChanged.length" type="button" class="btn btn-secondary ml-1" (click)="copyResourceImages()">File Changed List</button>
-      <button *ngIf="cardAdded.length" type="button" class="btn btn-secondary ml-1" (click)="convertNewCards()">Convert New Cards</button>
+      <button *ngIf="getChangedCard().length" type="button" class="btn btn-secondary ml-1"
+        (click)="copyResourceImages()">File Changed List</button>
+      <button *ngIf="getAddedCard().length" type="button" class="btn btn-secondary ml-1" (click)="convertNewCards()">Convert New Cards</button>
     </div>
   </div>
 
@@ -51,8 +50,40 @@
     <button type="button" class="btn btn-success mr-3" (click)="optionChanged('newChangeLog')">Change Log</button>
   </div>
 
-  <div *ngIf="cardAdded.length">There are {{cardAdded.length}} card added</div>
-  <div *ngIf="cardChanged.length">There are {{cardChanged.length}} card changes</div>
-  <div id="display"></div>
-  <div id="code"></div>
+  <div class="mt-2" *ngIf="getAddedCard().length">There are {{getAddedCard().length}} card added</div>
+  <div *ngIf="getChangedCard().length">There are {{getChangedCard().length}} card changes</div>
+
+  <table class="table mt-3" style="table-layout: fixed">
+    <colgroup>
+      <col style="width: 20%;">
+      <col style="width: 20%;">
+      <col style="width: 60%;">
+    </colgroup>
+    <thead class="thead-dark text-center">
+      <tr>
+        <th scope="col" colspan="2">Card</th>
+        <th scope="col">Differences</th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let log of logs">
+        <tr>
+          <td>
+            <img *ngIf="log.type != 'add'" [attr.src]="getAPIImage(PatchInfo[this.patchIDs.old].code, log.data.code)"
+              width="150px">
+          </td>
+          <td>
+            <img *ngIf="log.type != 'remove'" [attr.src]="getAPIImage(PatchInfo[this.patchIDs.new].code, log.data.code)" width="150px">
+          </td>
+          <td rowspan="2">
+            <div *ngFor="let diff of log.diff" [innerHTML]="diff | safeHtml"></div>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" class="text-center">{{log.data.name}} ({{log.data.code}})</td>
+          <td></td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
 </ng-container>
