--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,20 +1,59 @@
-<h1>LoR Generator v1.2.2</h1>
+<h1>LoR Generator v1.4</h1>
 <p>A tool for tracking the card updates of each patch and save the editor's time.</p>
 <p>Author: Onfealive</p>
 
 <h2>Change Log</h2>
-<div class="accordion" id="accordionChangeLog">
+<div class="accordion mb-5" id="accordionChangeLog">
     <div class="card">
-        <div class="card-header" id="headingOne">
+        <div class="card-header" id="headingV1_4">
             <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-                    data-target="#v1_2_2" aria-expanded="true" aria-controls="v1_2_2">
-                    v1.2.2
+                    data-target="#v1_4" aria-expanded="true" aria-controls="v1_4">
+                    v1.4
                 </button>
             </h2>
         </div>
 
-        <div id="v1_2_2" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionChangeLog">
+        <div id="v1_4" class="collapse show" aria-labelledby="headingV1_4" data-parent="#accordionChangeLog">
+            <div class="card-body">
+                <ul>
+                    <li>Data
+                        <ul>
+                            <li>V2.3 until day 2021/02/22</li>
+                        </ul>
+                    </li>
+                    <li>Patch Note Generator
+                        <ul>
+                            <li>Updated: Now use all local files as database, instead of qualifying.</li>
+                            <li>Fix some typos.</li>
+                        </ul>
+                    </li>
+                    <li>Expedition Generator
+                        <ul>
+                            <li>Updated: Now use all local files as database, instead of qualifying.</li>
+                        </ul>
+                    </li>
+                    <li>Database
+                        <ul>
+                            <li>Added - Use to searching for your cards.</li>
+                            <li>Filters: Region, Set, Card Type</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header" id="headingV1_3">
+            <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
+                    data-target="#v1_3" aria-expanded="false" aria-controls="v1_3">
+                    v1.3
+                </button>
+            </h2>
+        </div>
+
+        <div id="v1_3" class="collapse" aria-labelledby="headingV1_3" data-parent="#accordionChangeLog">
             <div class="card-body">
                 <ul>
                     <li>Data
@@ -39,7 +78,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header" id="headingTwo">
+        <div class="card-header" id="headingV1_2_1">
             <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                     data-target="#v1_2_1" aria-expanded="false" aria-controls="v1_2_1">
@@ -47,7 +86,7 @@
                 </button>
             </h2>
         </div>
-        <div id="v1_2_1" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionChangeLog">
+        <div id="v1_2_1" class="collapse" aria-labelledby="headingV1_2_1" data-parent="#accordionChangeLog">
             <div class="card-body">
                 <ul>
                     <li>Data
@@ -65,7 +104,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header" id="headingThree">
+        <div class="card-header" id="headingV1_2_0">
             <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                     data-target="#v1_2_0" aria-expanded="false" aria-controls="v1_2_0">
@@ -73,7 +112,7 @@
                 </button>
             </h2>
         </div>
-        <div id="v1_2_0" class="collapse" aria-labelledby="headingThree" data-parent="#accordionChangeLog">
+        <div id="v1_2_0" class="collapse" aria-labelledby="headingV1_2_0" data-parent="#accordionChangeLog">
             <div class="card-body">
                 <ul>
                     <li>Data
@@ -87,7 +126,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header" id="headingThree">
+        <div class="card-header" id="headingV1_1">
             <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                     data-target="#v1_1" aria-expanded="false" aria-controls="v1_1">
@@ -95,7 +134,7 @@
                 </button>
             </h2>
         </div>
-        <div id="v1_1" class="collapse" aria-labelledby="headingThree" data-parent="#accordionChangeLog">
+        <div id="v1_1" class="collapse" aria-labelledby="headingV1_1" data-parent="#accordionChangeLog">
             <div class="card-body">
                 <ul>
                     <li>Data
@@ -119,7 +158,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header" id="headingThree">
+        <div class="card-header" id="headingV1_0">
             <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
                     data-target="#v1_0" aria-expanded="false" aria-controls="v1_0">
@@ -127,7 +166,7 @@
                 </button>
             </h2>
         </div>
-        <div id="v1_0" class="collapse" aria-labelledby="headingThree" data-parent="#accordionChangeLog">
+        <div id="v1_0" class="collapse" aria-labelledby="headingV1_0" data-parent="#accordionChangeLog">
             <div class="card-body">
                 <ul>
                     <li>Live.</li>
