--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,183 +1,25 @@
-<h1>LoR Generator v1.4</h1>
+<h1>LoR Generator {{latestVersion}}</h1>
 <p>A tool for tracking the card updates of each patch and save the editor's time.</p>
 <p>Author: Onfealive</p>
 
 <h2>Change Log</h2>
 <div class="accordion mb-5" id="accordionChangeLog">
-    <div class="card">
-        <div class="card-header" id="headingV1_4">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-                    data-target="#v1_4" aria-expanded="true" aria-controls="v1_4">
-                    v1.4
-                </button>
-            </h2>
-        </div>
-
-        <div id="v1_4" class="collapse show" aria-labelledby="headingV1_4" data-parent="#accordionChangeLog">
-            <div class="card-body">
+    <div class="accordion-item" *ngFor="let changeLog of changeLogs; let i = index">
+        <h2 class="accordion-header" [id]="'heading' + i">
+            <button class="accordion-button" [ngClass]="{'collapsed': i != 0}" type="button" data-bs-toggle="collapse"
+                [attr.data-bs-target]="'#collapse' + i" [attr.aria-expanded]="i == 0"
+                [attr.aria-controls]="'collapse' + i">
+                {{'v' + changeLog.version}}
+            </button>
+        </h2>
+        <div [id]="'collapse' + i" class="accordion-collapse collapse" [ngClass]="{'show': i == 0}"
+            [attr.aria-labelledby]="'heading' + i" data-bs-parent="#accordionChangeLog">
+            <div class="accordion-body">
                 <ul>
-                    <li>Data
+                    <li *ngFor="let change of changeLog.changes">
+                        {{change.title}}
                         <ul>
-                            <li>V2.3 until day 2021/02/22</li>
-                        </ul>
-                    </li>
-                    <li>Patch Note Generator
-                        <ul>
-                            <li>Updated: Now use all local files as database, instead of qualifying.</li>
-                            <li>Fix some typos.</li>
-                        </ul>
-                    </li>
-                    <li>Expedition Generator
-                        <ul>
-                            <li>Updated: Now use all local files as database, instead of qualifying.</li>
-                        </ul>
-                    </li>
-                    <li>Database
-                        <ul>
-                            <li>Added - Use to searching for your cards.</li>
-                            <li>Filters: Region, Set, Card Type</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header" id="headingV1_3">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                    data-target="#v1_3" aria-expanded="false" aria-controls="v1_3">
-                    v1.3
-                </button>
-            </h2>
-        </div>
-
-        <div id="v1_3" class="collapse" aria-labelledby="headingV1_3" data-parent="#accordionChangeLog">
-            <div class="card-body">
-                <ul>
-                    <li>Data
-                        <ul>
-                            <li>V2.3 until day 2021/02/21</li>
-                            <li>Bugfix: Add missing data of V1.7</li>
-                        </ul>
-                    </li>
-                    <li>Patch Note Generator
-                        <ul>
-                            <li>Update Layout: Table display with old and new card images (if any).</li>
-                        </ul>
-                    </li>
-                    <li>About
-                        <ul>
-                            <li>Added.</li>
-                            <li>Change Log: Added.</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header" id="headingV1_2_1">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                    data-target="#v1_2_1" aria-expanded="false" aria-controls="v1_2_1">
-                    v1.2.1
-                </button>
-            </h2>
-        </div>
-        <div id="v1_2_1" class="collapse" aria-labelledby="headingV1_2_1" data-parent="#accordionChangeLog">
-            <div class="card-body">
-                <ul>
-                    <li>Data
-                        <ul>
-                            <li>V2.3 until day 2021/02/20</li>
-                        </ul>
-                    </li>
-                    <li>Patch Note Generator
-                        <ul>
-                            <li>Add toggle for added and changes cards.</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header" id="headingV1_2_0">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                    data-target="#v1_2_0" aria-expanded="false" aria-controls="v1_2_0">
-                    v1.2.0
-                </button>
-            </h2>
-        </div>
-        <div id="v1_2_0" class="collapse" aria-labelledby="headingV1_2_0" data-parent="#accordionChangeLog">
-            <div class="card-body">
-                <ul>
-                    <li>Data
-                        <ul>
-                            <li>V2.3 until day 2021/02/19</li>
-                            <li>V2.2</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header" id="headingV1_1">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                    data-target="#v1_1" aria-expanded="false" aria-controls="v1_1">
-                    v1.1
-                </button>
-            </h2>
-        </div>
-        <div id="v1_1" class="collapse" aria-labelledby="headingV1_1" data-parent="#accordionChangeLog">
-            <div class="card-body">
-                <ul>
-                    <li>Data
-                        <ul>
-                            <li>Added - From V0.9.1 to V2.1</li>
-                        </ul>
-                    </li>
-                    <li>Patch Note Generator
-                        <ul>
-                            <li>Now able to use site data, it is not necessary using local files.</li>
-                            <li>Now can hover on Card name to see card image.</li>
-                        </ul>
-                    </li>
-                    <li>Expedition Generator
-                        <ul>
-                            <li>Now able to use site data, it is not necessary using local files.</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header" id="headingV1_0">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                    data-target="#v1_0" aria-expanded="false" aria-controls="v1_0">
-                    v1.0
-                </button>
-            </h2>
-        </div>
-        <div id="v1_0" class="collapse" aria-labelledby="headingV1_0" data-parent="#accordionChangeLog">
-            <div class="card-body">
-                <ul>
-                    <li>Live.</li>
-                    <li>Patch Note Generator
-                        <ul>
-                            <li>Added - Used to collect changes to Patch Note, as well as for writing Patch Note on Wiki.</li>
-                        </ul>
-                    </li>
-                    <li>Expedition Generator
-                        <ul>
-                            <li>Added - Use to replace the text card related to the Expedition of Patch Note..</li>
+                            <li *ngFor="let detail of change.details">{{detail}}</li>
                         </ul>
                     </li>
                 </ul>
