--- a/src/app/patch-notes-generator/patch-notes-generator.component.html
+++ b/src/app/patch-notes-generator/patch-notes-generator.component.html
@@ -70,12 +70,13 @@
       <ng-container *ngFor="let log of logs">
         <tr>
           <td>
-            <img *ngIf="log.type != 'add'" [attr.src]="getAPIImage(log.data.code, PatchInfo[this.comparingPatch].code)"
-              width="200px">
+            <img *ngIf="log.type != 'add' && PatchInfo[this.comparingPatch]" [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.comparingPatch].code)"
+              width="200px" [defaultImage]="defaultImage">
           </td>
           <td>
-            <img *ngIf="log.type != 'remove'"
-              [attr.src]="getAPIImage(log.data.code, PatchInfo[this.selectedPatch].code)" width="200px">
+            <img *ngIf="log.type != 'remove' && PatchInfo[this.selectedPatch]"
+              [lazyLoad]="getAPIImage(log.data.code, PatchInfo[this.selectedPatch].code)" width="200px"
+              [defaultImage]="defaultImage">
           </td>
           <td rowspan="2">
             <div *ngFor="let diff of log.diff" [innerHTML]="diff | safeHtml"></div>
