--- a/src/app/database/database.component.scss
+++ b/src/app/database/database.component.scss
@@ -57,6 +57,9 @@ $scrollLength: 100vh;
     }
 }
 
+.form-check {
+    padding-left: 0.5rem;
+}
 
 form {
     padding: 20px;
@@ -71,10 +74,10 @@ form {
 
     label {
         border: 1px solid #fff;
-        padding: 10px;
+        // padding: 5px;
         display: block;
         position: relative;
-        margin: 10px;
+        margin: 5px;
         cursor: pointer;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
@@ -121,6 +124,7 @@ form {
         background-color: green;
         transform: scale(1);
         color: white;
+        z-index: 1;
     }
 
     :checked + label {
@@ -131,5 +135,22 @@ form {
             filter: drop-shadow(5px 5px 5px #222);
             z-index: -1;
         }
+
+        &.circle span {
+            transform: translate(-50%, -50%) scale(0.9);
+            z-index: 0;
+        }
+    }
+
+    
+
+    .circle span {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        height: auto;
     }
 }
