--- a/src/app/database/database.component.scss
+++ b/src/app/database/database.component.scss
@@ -57,14 +57,22 @@ $scrollLength: 100vh;
     }
 }
 
-.form-check {
-    padding-left: 0.5rem;
-}
-
 form {
     padding: 20px;
     border: 1px solid black;
     border-radius: 10px;
+
+    .form-control-plaintext {
+        outline: none;
+    }
+
+    .form-check {
+        padding-left: 0.5rem;
+    }
+
+    textarea {
+        resize: none;
+    }
 }
 
 .image-checkboxes-container {
@@ -142,8 +150,6 @@ form {
         }
     }
 
-    
-
     .circle span {
         display: block;
         position: absolute;
@@ -152,5 +158,18 @@ form {
         transform: translate(-50%, -50%);
         color: white;
         height: auto;
+    }
+}
+
+.card-info {
+    .card-header,
+    .card-img-top {
+        cursor: pointer;
+    }
+}
+
+.card-detail {
+    .card-image {
+        max-width: 100%;
     }
 }
